--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>com.filter.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
         <filter-name>LoginFilter</filter-name>
         <filter-class>com.filter.LoginFilter</filter-class>
     </filter>
@@ -47,6 +55,24 @@
             <param-value>checkCode</param-value>
         </init-param>
     </servlet>
+
+    <servlet>
+        <servlet-name>StudentServlet</servlet-name>
+        <servlet-class>com.servlet.model.StudentServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TutorServlet</servlet-name>
+        <servlet-class>com.servlet.model.TutorServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>TutorServlet</servlet-name>
+        <url-pattern>/tutor</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>StudentServlet</servlet-name>
+        <url-pattern>/student</url-pattern>
+    </servlet-mapping>
 
 
     <servlet-mapping>
