--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,7 +1,7 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/two_way_select?characterEncoding=utf8
+url=jdbc:mysql://localhost:3306/123?characterEncoding=utf8
 username=root
-password=198081
+password=
 initialSize=5
 maxActive=10
 maxWait=1000
