--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,16 +21,6 @@
     </filter-mapping>
 
 
-    <!--处理选课事件的过滤器，拦截所有请求-->
-    <filter>
-        <filter-name>EventFilter</filter-name>
-        <filter-class>com.filter.EventFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>EventFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
     <filter>
         <filter-name>CloseConnectionFilter</filter-name>
         <filter-class>com.filter.CloseConnectionFilter</filter-class>
@@ -51,6 +41,16 @@
     <filter-mapping>
         <filter-name>TransactionFilter</filter-name>
         <url-pattern>/protected/*</url-pattern>
+    </filter-mapping>
+    <!--处理选课事件的过滤器，拦截所有请求-->
+    <filter>
+        <filter-name>EventFilter</filter-name>
+        <filter-class>com.filter.EventFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EventFilter</filter-name>
+        <url-pattern>/tutor</url-pattern>
+        <url-pattern>/student</url-pattern>
     </filter-mapping>
 
     <!--配置kpatchaServlet的映射路径-->
